--- a/sample1/index.html
+++ b/sample1/index.html
@@ -48,6 +48,12 @@
     var box = new THREE.Mesh(geometry, material);
     box.position.set(0,0,0); //位置を指定
     scene.add(box);   // シーンに追加
+    
+    var cylinderGeometory = new THREE.CylinderGerometory(0, 1, 8);
+    var cylinderMaterial = new THREE.MethPhongMaterial({ color: 0x0000ff });
+    var cylinder = new THREE.Meth(cylinerGerometory, cylinerMaterial);
+    cylinder.position.set(0,0,5);
+    scene.add(cylinder);
   
     // 初回実行
     var update = function() {
