--- a/sample1/index.html
+++ b/sample1/index.html
@@ -51,7 +51,7 @@
     
     var cylinderGeometory = new THREE.CylinderGerometory(0, 1, 8);
     var cylinderMaterial = new THREE.MeshPhongMaterial({ color: 0x0000ff });
-    var cylinder = new THREE.Mesh(cylinerGerometory, cylinerMaterial);
+    var cylinder = new THREE.Mesh(cylinerGeometory, cylinerMaterial);
     cylinder.position.set(1,1,0);
     scene.add(cylinder);
   
