Update and rename sample1/sample1.html to index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		document.write("<p>この授業では、WebGLを用いてコンピュータグラフィックスを作成します。</p>");
 
 		var image = new Image(128,128); //image オブジェクトの作成
-		image.src = "butterfly.JPG"; //imageのソースの指定
+		image.src = "sample1/butterfly.JPG"; //imageのソースの指定
 		document.body.appendChild(image); //imageをDOM要素に組み込む
 	</script>
 </HTML>
