--- a/sample1/index.html
+++ b/sample1/index.html
@@ -49,7 +49,7 @@
     box.position.set(0,0,0); //位置を指定
     scene.add(box);   // シーンに追加
     
-    //var cylinderGeometory = new THREE.CylinderGerometory(0, 1, 8);
+    var cylinderGeometory = new THREE.CylinderGerometory(0, 1, 8);
     //var cylinderMaterial = new THREE.MeshPhongMaterial({ color: 0x0000ff });
     //var cylinder = new THREE.Mesh(cylinerGeometory, cylinerMaterial);
     //cylinder.position.set(1,1,0);
