--- a/sample1/index.html
+++ b/sample1/index.html
@@ -50,8 +50,8 @@
     scene.add(box);   // シーンに追加
     
     var cylinderGeometory = new THREE.CylinderGerometory(0, 1, 8);
-    //var cylinderMaterial = new THREE.MeshPhongMaterial({ color: 0x0000ff });
-    //var cylinder = new THREE.Mesh(cylinerGeometory, cylinerMaterial);
+    var cylinderMaterial = new THREE.MeshPhongMaterial({ color: 0x0000ff });
+    var cylinder = new THREE.Mesh(cylinerGeometory, cylinerMaterial);
     //cylinder.position.set(1,1,0);
     //scene.add(cylinder);
   
