--- a/sample1/index.html
+++ b/sample1/index.html
@@ -47,7 +47,7 @@
     var material = new THREE.MeshPhongMaterial({ color: 0x0000ff });
     var box = new THREE.Mesh(geometry, material);
     box.position.set(0,0,0); //位置を指定
-    scene.add(box);   // シーンに追加
+    //scene.add(box);   // シーンに追加
     
     var cylinderGeometory = new THREE.CylinderGerometory(0, 1, 8);
     var cylinderMaterial = new THREE.MeshPhongMaterial({ color: 0x0000ff });
