--- a/sample1/index.html
+++ b/sample1/index.html
@@ -47,12 +47,12 @@
     var material = new THREE.MeshPhongMaterial({ color: 0x0000ff });
     var box = new THREE.Mesh(geometry, material);
     box.position.set(0,0,0); //位置を指定
-    //scene.add(box);   // シーンに追加
+    scene.add(box);   // シーンに追加
     
     var cylinderGeometory = new THREE.CylinderGerometory(0, 1, 8);
     //var cylinderMaterial = new THREE.MeshPhongMaterial({ color: 0x0000ff });
     //var cylinder = new THREE.Mesh(cylinerGeometory, cylinerMaterial);
-    /bcylinder.position.set(1,1,0);
+    //cylinder.position.set(1,1,0);
     //scene.add(cylinder);
   
     // 初回実行
